OpenVi 7.0.1 -> Unreleased: Tue Jan 25 8:36:27 2022
	+ Bump version and use -dev to denote development version
	+ Reformat ChangeLog for consistency; various spelling corrections
	+ Update ChangeLog with OpenVi history
	+ Format OpenBSD commits to ChangeLog format
	+ Documentation: Clean-up legacy documentation, adjust formatting
	+ Simplify GNUmakefile rules
	+ Update GNUmakefile; correct a typo in a message
	+ Update LICENSE text and formatting

OpenBSD 7.0 -> OpenVi 7.0.1: Mon Jan 24 10:37:28 2022
	+ OpenVi created supporting glibc-based Linux systems
	+ Build: Create GNUmakefile
	+ Build: Attempt to detect and use mtmalloc or jemalloc if available
	+ BDB: Support builds with post-1.8.5 BerkeleyDB versions (using BDB
	  1.8.5 emulation) but at the expense of preservation and recovery.
	+ Documentation: Create initial README.md

Mon Oct 25 14:17:24 2021
	+ vi(1): fix use after free with unsaved buffer

Sun Oct 24 21:24:15 2021
	+ For open/openat, if the flags parameter does not contain
	  O_CREAT, the 3rd (variadic) mode_t parameter is irrelevant.
	  Many developers in the past have passed mode_t (0, 044, 0644,
	  or such), which might lead future people to copy this broken
	  idiom, and perhaps even believe this parameter has some meaning
	  or implication or application. Delete them all. This comes out of
	  a conversation where tb@ noticed that a strange (but intentional)
	  pledge behaviour is to always knock-out high-bits from mode_t on a
	  number of system calls as a safety factor, and his bewilderment
	  that this appeared to be happening against valid modes (at least
	  visually), but no sorry, they are all irrelevant junk. They could
	  all be 0xdeafbeef. ok millert@

OpenBSD 6.9 -> OpenBSD 7.0: Thu Sep 2 11:19:02 2021
	+ Make all signal handler functions async-signal-safe by
	  deleting the redundant "killersig" struct member and using the
	  existing sig_atomic_t cl_sigterm variable instead.